# rh_audio

./: CMakeLists.txt  README.md  configure.ac  install.linux.sh
src/: Android.mk  CMakeLists.txt  Makefile.am  bucket.c  bucket.h  rh_audio.c  rh_audio.h  rh_audio.hpp  rh_audio_android.c  rh_audio_android.cpp  rh_audio_common.c  rh_audio_internal.h  rh_audio_linux.c  test.c  test.cpp
src/aout/: CMakeLists.txt  aout.c  aout.h  aout_internal.c  aout_internal.h
src/aout/OpenSLES/: buffer_queue.c  buffer_queue.h  close.c  io.c  open.c  sample.c  sles.c  sles.h  sles_api.c  sles_private.h  start.c  stop.c  update.c
src/aout/alsa/: CMakeLists.txt  addref.c  alsa.c  alsa.h  alsa_api.c  alsa_private.h  close.c  hw_settings.c  io.c  open.c  sample.c  settings.c  start.c  stop.c  sw_settings.c  update.c
src/aout/embedded/: CMakeLists.txt  close.c  embedded.c  embedded.h  embedded_api.c  embedded_private.h  open.c  sample.c  start.c  stop.c  update.c
src/asmp/: CMakeLists.txt  asmp.c  asmp.h  asmp_internal.h  i_ffmpeg.c  i_raw.c  i_s5prom.c  i_s5prom_old.c  i_sndfile.c
